# hasl

./: LICENSE  README.md  hasl.cabal
cmd/: Main.hs
src/: TimeLog.hs
test/: Spec.hs  TimeLogSpec.hs
