name:                hasl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hasl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hasl
  hs-source-dirs:      cmd
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hasl

library
  hs-source-dirs:      src
  exposed-modules:     TimeLog
  build-depends:       base >= 4.7 && < 5
                     , containers 
  default-language:    Haskell2010

test-suite spec
  build-depends:  
    base,
    hspec == 2.*,
    hasl
  hs-source-dirs: test
  main-is: Spec.hs
  Type: exitcode-stdio-1.0
  default-language:    Haskell2010
  other-modules:
    TimeLogSpec 
  build-tool-depends: hspec-discover:hspec-discover == 2.*
